@@ -72,6 +72,9 @@ RDB_evaluate_bool(RDB_expression *, const RDB_tuple *tup, RDB_transaction *,
 int
 RDB_evaluate(RDB_expression *, const RDB_tuple *, RDB_transaction *, RDB_value *);
 
+int
+_RDB_find_rename_from(int renc, RDB_renaming renv[], const char *name);
+
 #define _RDB_pkey_len(tbp) ((tbp)->keyv[0].attrc)
 
 #endif
